--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="DataLibrary">
+      <HintPath>..\DataLibrary\bin\Release\netcoreapp3.1\DataLibrary.dll</HintPath>
+    </Reference>
+	  <PackageReference Include="Dapper" Version="2.0.123"></PackageReference>
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0"></PackageReference>
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"></PackageReference>
+  </ItemGroup>
+
 </Project>
